make command output only send to server and original command executor