@@ -19,6 +19,7 @@ import com.velocitypowered.api.event.command.CommandExecuteEvent;
 import com.velocitypowered.api.event.proxy.ProxyInitializeEvent;
 import com.velocitypowered.api.plugin.Plugin;
 import com.velocitypowered.api.plugin.annotation.DataDirectory;
+import com.velocitypowered.api.proxy.ConsoleCommandSource;
 import com.velocitypowered.api.proxy.Player;
 import com.velocitypowered.api.proxy.ProxyServer;
 import net.kyori.adventure.text.Component;
@@ -77,7 +78,7 @@ public class ForcePackVelocity implements ForcePackAPI {
         getLogger().info("Enabling ForcePack (velocity)...");
         this.createConfig();
         this.packHandler = new PackHandler(this);
-        this.loadResourcePacks();
+        this.loadResourcePacks(null);
         this.registerListeners();
         this.registerCommands();
         metricsFactory.make(this, 13678);
@@ -121,7 +122,7 @@ public class ForcePackVelocity implements ForcePackAPI {
         commandManager.register(meta, new ForcePackCommand(this));
     }
 
-    public void loadResourcePacks() {
+    public void loadResourcePacks(@Nullable Player player) {
         resourcePacks.clear(); // Clear for reloads
 
         this.checkUnload();
@@ -129,6 +130,7 @@ public class ForcePackVelocity implements ForcePackAPI {
 
         final boolean verifyPacks = getConfig().getBoolean("verify-resource-packs");
         final VelocityConfig servers = getConfig().getConfig("servers");
+        final ConsoleCommandSource consoleSender = this.getServer().getConsoleCommandSource();
         for (String serverName : servers.getKeys()) {
             final VelocityConfig serverConfig = servers.getConfig(serverName);
             final VelocityConfig resourcePack = serverConfig.getConfig("resourcepack");
@@ -178,7 +180,9 @@ public class ForcePackVelocity implements ForcePackAPI {
                         this.getLogger().error("-----------------------------------------------");
                         return;
                     } else {
-                        server.sendMessage(Component.text("Hash verification complete for server " + serverName + ".").color(NamedTextColor.GREEN));
+                        Component hashMsg = Component.text("Hash verification complete for server " + serverName + ".").color(NamedTextColor.GREEN);
+                        consoleSender.sendMessage(hashMsg);
+                        if (player != null) player.sendMessage(hashMsg);
                     }
                 } catch (Exception e) {
                     this.getLogger().error("Please provide a correct SHA-1 hash/url!");
@@ -194,7 +198,9 @@ public class ForcePackVelocity implements ForcePackAPI {
             return;
         }
 
-        server.sendMessage(Component.text("Loaded " + resourcePacks.size() + " verified resource packs.").color(NamedTextColor.GREEN));
+        Component loadedMsg = Component.text("Loaded " + resourcePacks.size() + " verified resource packs.").color(NamedTextColor.GREEN);
+        consoleSender.sendMessage(loadedMsg);
+        if (player != null) player.sendMessage(loadedMsg);
     }
 
     private void checkUnload() {
@@ -246,7 +252,7 @@ public class ForcePackVelocity implements ForcePackAPI {
     }
 
     private void checkForRehost(String url, String section) {
-        List<String> warnForHost = Arrays.asList("convallyria.com");
+        List<String> warnForHost = List.of("convallyria.com");
         boolean rehosted = true;
         for (String host : warnForHost) {
             if (url.contains(host)) {
